# byte-mutator

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: config.toml
src/: config.rs  fuzz_config.rs  lib.rs  reset_buffer.rs  undo_buffer.rs
src/mutators/: bitflipper.rs  mod.rs
tests/: config.rs  fuzz_config.toml  tests.rs
