[package]
name = "byte-mutator"
version = "0.1.0"
authors = ["ragona <ryanragona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
toml = "0.5.3"
serde = "1.0.102"
serde_derive = "1.0.102"
