[package]
name = "byte-mutator"
version = "0.1.2"
authors = ["ragona <ryanragona@gmail.com>"]
edition = "2018"
description = "Library to define staged mutations for a series of bytes"
license = "MIT"
repository = "https://github.com/ragona/byte-mutator"
keywords = ["fuzz", "fuzzing", "mutation", "mutator", "bytes"]
readme = "README.md"

[dependencies]
arrayvec = "0.5.1"
toml = "0.5.5"
serde = "1.0.102"
serde_derive = "1.0.102"
